--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -1,3 +1,41 @@
 body {
   background-color: rgb(234, 234, 234);
 }
+
+.ui.inverted.top.fixed.menu {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 1) 10%,
+    rgba(253, 187, 45, 1) 100%
+  ) !important;
+}
+
+/*home page styles*/
+.masthead {
+  display: flex;
+  align-items: center;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(253, 187, 45, 1) 90%
+  ) !important;
+  height: 100vh;
+}
+
+.masthead .ui.menu .ui.button,
+.ui.menu a.ui.inverted.button {
+  margin-left: 0.5em;
+}
+
+.masthead h1.ui.header {
+  font-size: 4em;
+  font-weight: normal;
+}
+
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
+}
+/*end home page styles*/
